fix 'see details' button so it shows up on right for md-sized and up but in line with bottom margin on smaller screens

--- a/web/static/base.css
+++ b/web/static/base.css
@@ -273,6 +273,10 @@ button.account-row {
     padding: 5px 5px 0 5px;
 }
 
+.panel.study-list .details-button {
+    margin-bottom: 10px;
+}
+
 .form-inline.study-list .btn.clear {
     margin-left: 5px;
 }
